jsonschemadsl2ecore.trafo.opt/test/test104/validtests/example2.test104
{
	"ale":{
		"runs-on":"something",
		"foo":true
	}	
} 