jsonschemadsl2ecore.trafo.opt/test/test104/invalidtests/example7.test104
{
	"ale":{
		"runs-on":1,
		"bar":true
	},
	"prop1":"abcdef"	
} 